...
@_exported import Strings

// swiftlint:disable line_length

// MARK: - Common Strings
extension Strings {
  public static let cancelButtonTitle = NSLocalizedString("CancelButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Cancel", comment: "")
  public static let webContentAccessibilityLabel = NSLocalizedString("WebContentAccessibilityLabel", tableName: "BraveShared", bundle: .strings, value: "Web content", comment: "Accessibility label for the main web content view")
  public static let shareLinkActionTitle = NSLocalizedString("ShareLinkActionTitle", tableName: "BraveShared", bundle: .strings, value: "Share Link", comment: "Context menu item for sharing a link URL")
  public static let showTabs = NSLocalizedString("ShowTabs", tableName: "BraveShared", bundle: .strings, value: "Show Tabs", comment: "Accessibility Label for the tabs button in the browser toolbar")
  public static let copyLinkActionTitle = NSLocalizedString("CopyLinkActionTitle", tableName: "BraveShared", bundle: .strings, value: "Copy Link", comment: "Context menu item for copying a link URL to the clipboard")
  public static let openNewPrivateTabButtonTitle = NSLocalizedString("OpenNewPrivateTabButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Open in New Private Tab", comment: "Context menu option for opening a link in a new private tab")
  public static let deleteLoginButtonTitle = NSLocalizedString("DeleteLoginButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Delete", comment: "Label for the button used to delete the current login.")
  public static let saveButtonTitle = NSLocalizedString("SaveButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Save", comment: "Label for the button used to save data")
  public static let share = NSLocalizedString("CommonShare", tableName: "BraveShared", bundle: .strings, value: "Share", comment: "Text to select sharing something (example: image, video, URL)")
  public static let download = NSLocalizedString("CommonDownload", tableName: "BraveShared", bundle: .strings, value: "Download", comment: "Text to choose for downloading a file (example: saving an image to phone)")
  public static let showLinkPreviewsActionTitle = NSLocalizedString("ShowLinkPreviewsActionTitle", tableName: "BraveShared", bundle: .strings, value: "Show Link Previews", comment: "Context menu item for showing link previews")
  public static let hideLinkPreviewsActionTitle = NSLocalizedString("HideLinkPreviewsActionTitle", tableName: "BraveShared", bundle: .strings, value: "Hide Link Previews", comment: "Context menu item for hiding link previews")
...
  public static let authPromptAlertUsernamePlaceholderText = NSLocalizedString("AuthPromptAlertUsernamePlaceholderText", tableName: "BraveShared", bundle: .strings, value: "Username", comment: "Username textbox in Authentication prompt")
  public static let authPromptAlertPasswordPlaceholderText = NSLocalizedString("AuthPromptAlertPasswordPlaceholderText", tableName: "BraveShared", bundle: .strings, value: "Password", comment: "Password textbox in Authentication prompt")
}

// MARK:-  BrowserViewController.swift
extension Strings {
  public static let openNewTabButtonTitle = NSLocalizedString("OpenNewTabButtonTitle", tableName: "BraveShared", bundle: .strings, value: "Open in New Tab", comment: "Context menu item for opening a link in a new tab")

  public static let openImageInNewTabActionTitle = NSLocalizedString("OpenImageInNewTab", tableName: "BraveShared", bundle: .strings, value: "Open Image In New Tab", comment: "Context menu for opening image in new tab")
  public static let saveImageActionTitle = NSLocalizedString("SaveImageActionTitle", tableName: "BraveShared", bundle: .strings, value: "Save Image", comment: "Context menu item for saving an image")
  public static let accessPhotoDeniedAlertTitle = NSLocalizedString("AccessPhotoDeniedAlertTitle", tableName: "BraveShared", bundle: .strings, value: "Brave would like to access your Photos", comment: "See http://mzl.la/1G7uHo7")
  public static let accessPhotoDeniedAlertMessage = NSLocalizedString("AccessPhotoDeniedAlertMessage", tableName: "BraveShared", bundle: .strings, value: "This allows you to save the image to your Camera Roll.", comment: "See http://mzl.la/1G7uHo7")
  public static let openPhoneSettingsActionTitle = NSLocalizedString("OpenPhoneSettingsActionTitle", tableName: "BraveShared", bundle: .strings, value: "Open Settings", comment: "See http://mzl.la/1G7uHo7")
...
  public static let syncAddAnotherDevice = NSLocalizedString("SyncAddAnotherDevice", tableName: "BraveShared", bundle: .strings, value: "Add New Device", comment: "Add New Device cell button.")
  public static let syncTabletOrMobileDevice = NSLocalizedString("SyncTabletOrMobileDevice", tableName: "BraveShared", bundle: .strings, value: "Tablet or Phone", comment: "Tablet or phone button title")
  public static let syncAddTabletOrPhoneTitle = NSLocalizedString("SyncAddTabletOrPhoneTitle", tableName: "BraveShared", bundle: .strings, value: "Add a Tablet or Phone", comment: "Add Tablet or phone title")
  public static let syncComputerDevice = NSLocalizedString("SyncComputerDevice", tableName: "BraveShared", bundle: .strings, value: "Computer", comment: "Computer device button title")
  public static let syncAddComputerTitle = NSLocalizedString("SyncAddComputerTitle", tableName: "BraveShared", bundle: .strings, value: "Add a Computer", comment: "Add a Computer title")
  public static let grantCameraAccess = NSLocalizedString("GrantCameraAccess", tableName: "BraveShared", bundle: .strings, value: "Enable Camera", comment: "Grand camera access")
  public static let removeDevice = NSLocalizedString("RemoveDevice", tableName: "BraveShared", bundle: .strings, value: "Remove", comment: "Action button for removing sync device.")
  public static let syncInitErrorTitle = NSLocalizedString("SyncInitErrorTitle", tableName: "BraveShared", bundle: .strings, value: "Sync Communication Error", comment: "Title for sync initialization error alert")
  public static let syncInitErrorMessage = NSLocalizedString("SyncInitErrorMessage", tableName: "BraveShared", bundle: .strings, value: "The Sync Agent is currently offline or not reachable. Please try again later.", comment: "Message for sync initialization error alert")
  // Remove device popups
  public static let syncRemoveLastDeviceTitle = NSLocalizedString("SyncRemoveLastDeviceTitle", tableName: "BraveShared", bundle: .strings, value: "Removing %@ will delete the Sync Chain.", comment: "Title for removing last device from Sync")
  public static let syncRemoveLastDeviceMessage = NSLocalizedString("SyncRemoveLastDeviceMessage", tableName: "BraveShared", bundle: .strings, value: "Data currently synced will be retained but all data in Brave’s Sync cache will be deleted. You will need to start a new sync chain to sync device data again.", comment: "Message for removing last device from Sync")
  public static let syncRemoveLastDeviceRemoveButtonName = NSLocalizedString("SyncRemoveLastDeviceRemoveButtonName", tableName: "BraveShared", bundle: .strings, value: "Delete Sync Chain", comment: "Button name for removing last device from Sync")
...
